# fluidsGL-optimus

./: Makefile  README.md
5_Simulations/: CMakeLists.txt  Makefile  fluidsGL.cpp  fluidsGL_kernels.cu  readme.txt
5_Simulations/fluidsGL/: Makefile  NsightEclipse.xml  UdpBroadcastClient.cpp  UdpBroadcastServer.cpp  UdpBroadcastServer.h  defines.h  fluidsGL.cpp  fluidsGL_client.cpp  fluidsGL_kernels.cu  half.hpp  mkaddr.c
5_Simulations/fluidsGL/clients/android/: .project  AndroidManifest.xml  Makefile  local.properties
5_Simulations/fluidsGL/clients/android/jni/: Android.mk  Application.mk  UdpBroadcastClient.cpp  UdpBroadcastClient.h  UdpBroadcastServer.h  canvas.cpp  canvas.h  fluidGL_client.cpp  fluidGL_client.h  half.hpp  jni.c  jni.cpp
5_Simulations/fluidsGL/clients/android/res/layout/: activity_fullscreen.xml
5_Simulations/fluidsGL/clients/android/res/values/: strings.xml
5_Simulations/fluidsGL/clients/android/src/com/example/caffemacchiato/: FullscreenActivity.java  GameLibJNIWrapper.java  ParticlesRenderer.java  ParticlesSurfaceView.java  RendererWrapper.java
5_Simulations/fluidsGL/clients/linux/: UdpBroadcastClient.cpp  UdpBroadcastClient.h  fluidsGL_client.cpp
5_Simulations/fluidsGL/data/: usi.ppm
5_Simulations/fluidsGL/description/: beamerthemeusi.sty  description.tex
5_Simulations/fluidsGL/description/figures/: booth.odp
5_Simulations/fluidsGL/slides/: beamerthemeusi.sty  beamerthemeusi.sty~  fluidsGL.tex
5_Simulations/fluidsGL/slides/figures/: .~lock.booth.odp#  booth.odp
Android/TenYears/: .project
Android/TenYears/jni/: canvas.cpp
(+9 files in other folders)
